# rs-wikipage2ql

./: Cargo.toml  README.md  doc-web.sh
examples/api/wikipage2ql/: Cargo.toml  client.sh  example.sh  wikipage2ql  wikipage2ql.gql
examples/api/wikipage2ql/src/: main.rs
src/: lib.rs
